Fixed waves not extending fully on mobile

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -30,4 +30,10 @@ footer {
 
 .footer-container {
     background-color: var(--pallette-misty-rose);
+    overflow: hidden;
+}
+
+.footer-wave-container {
+    width: 100vw;
+    transform: translateY(1px) translateX(-1px) scaleX(1.1);
 }
