--- a/src/index.scss
+++ b/src/index.scss
@@ -77,3 +77,7 @@ body, html {
       grid-template-columns: repeat( auto-fit, minmax(10px, 600px) );
   }
 }
+
+.header-wave-container {
+  transform: translateY(2px);
+}
